--- a/greeting-cd-pipeline/Jenkinsfile
+++ b/greeting-cd-pipeline/Jenkinsfile
@@ -13,5 +13,20 @@ pipeline {
         }
 
         // Add more stages here
+stage('Deploy') {
+
+            steps {
+
+                sh '''
+
+                    oc start-build greeting-metrics \
+
+                    --follow --wait -n RHT_OCP4_DEV_USER-metrics
+
+                '''
+
+            }
+
+        }
     }
 }
